kubernetes/clusters/homelab/apps/media/qui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qui
spec:
  ingressClassName: infra-traefik
  rules:
    - host: qui.lab.hddq.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qui
                port:
                  number: 7476
